src/main/java/com/example/reactivewebservice/error/custom/UserNotFoundException.java
package com.example.reactivewebservice.error.custom;

public class UserNotFoundException extends RuntimeException {
}
